# itoolkits

./: README.md  setup.py
cpp-repo-template/: .clang-format  .gitignore  CHANGELOG.md  README.md  makefile  meson.build  meson_options.txt  mytool.makefile
cpp-repo-template/src/: MyToolGitHash.cpp.in  MyToolVersion.cpp.in  MyToolVersion.h  meson.build
cpp-repo-template/src/tools/: MemoryConsumption.cpp  MemoryConsumption.h  PlainOption.h  Timer.cpp  Timer.h
cpp-repo-template/src/tools/mytool/: MyToolSettings.cpp  MyToolSettings.h  MyToolWorkflow.cpp  MyToolWorkflow.h  mytool.cpp
cpp-repo-template/subprojects/: pbbam.wrap
cpp-repo-template/tests/: meson.build
cpp-repo-template/tests/cram/: meson.build  noop.t
cpp-repo-template/tests/unit/: NoopTest.cpp  meson.build
cpp-repo-template/tools/: check-formatting  format-all
cpp-repo-template/tools/Darwin/: clang-format
cpp-repo-template/tools/Linux/: clang-format
isoseq/: example.sh  example_make_tiny_flea_isoseq_data.sh  example_run_tiny_flea_isoseq_pipeline.sh  subset_isoseq_subreads.py
itoolkits/R/: plot_unrolled_len_vs_sr_len.py  utils.R
itoolkits/hgap/: __init__.py  validate_smrtlink_hgap4.py
itoolkits/io/: __init__.py  miscio.py
itoolkits/isoseq/: example.sh  make_medium_iguana_isoseq_ds.sh  make_tiny_iguana_isoseq_ds.sh  make_tiny_isoseq2_ds.sh  make_tiny_jaguar_isoseq_ds.sh  subset_isoseq_subreads.py
itoolkits/isoseq/isoseq_settings/: global_options.xml  isoseq_options.xml  isoseq_w_genome_options.xml
itoolkits/misc/: consolidate-xml.py  ds_to_ds.py  extract_seq_from_fasta.py  samstat.py
itoolkits/pbsv/: make-subreads-bam-from-fasta.py  make-subreads-bam-from-zmws.py  utils.py
misc/: consolidate-xml.py
python-repo-template/: .gitignore  Disclaimer  LICENSE.txt  bamboo_build.sh  bamboo_mytool_build.sh  bamboo_mytool_test.sh  bamboo_setup.sh  makefile  mycoverage.cfg  mytool.makefile  setup.py
python-repo-template/mytool/: __init__.py
python-repo-template/tests/itest/: nose.cfg  setpath.py  test_indep.py  test_setup.py
